# ADN-DMR-Peer-Server

./: .gitignore  CHANGELOG.md  README.md  README_es.md  adn-echo.example.yaml  adn-parrot.example.yaml  adn-parrot.py  adn-server.example.yaml  adn-server.py  adn-voice.example.yaml  mkdocs.es.yml  mkdocs.yml  pyproject.toml  pytest.ini  requirements-docs.txt  requirements.txt
config/: ADN-MINIMAL.cfg  ADN-SAMPLE.cfg
docs/: PARROT.md  README.md  TTS_SETUP.md  site-root-index.html
docs/en/: README.md
docs/es/: README.md
examples/systemd/: adn-echo.service  adn-parrot.service  adn-server.service
schemas/: report-v2.json
schemas/examples/: dashboard_state.json  delta.json  hello.json  routing_table.json  topology.json  voice_event.json
src/adn_server/: __init__.py  main.py  parrot_main.py  version.py
tests/: README.md  __init__.py  conftest.py  test_version.py
tests/application/: test_bridge_table_store_ops.py  test_bridges_export.py  test_bridges_import.py  test_bridges_legacy_view.py  test_dashboard_state.py  test_downlink_stabilization.py  test_dynamic_tg_persist.py  test_dynamic_tg_restore.py  test_in_band_signalling_store_ops.py  test_master_server_broadcast_contention.py  test_mesh_codec_registry.py  test_monitor_hangtime_gate.py  test_monitor_report_contract.py  test_monitor_topology.py  test_obp_hbp_cross_slot_downlink.py  test_obp_monitor_voice_end.py  test_peer_rf_mode.py  test_peer_single_downlink.py  test_proxy_use_cases.py  test_report_payloads.py  test_report_queue.py  test_routing_table_export.py  test_routing_table_import.py  test_routing_table_legacy_view.py  test_rule_timer_store_ops.py  test_runtime_context.py  test_server_voice.py  test_slot_contention.py  test_stat_trimmer_store_ops.py  test_store_authority_timers.py  test_store_sync.py  test_subscription_router.py  test_subscription_router_parity.py  test_subscription_table_store_ops.py  test_timer_store_ops.py  test_timer_store_ops_slice3.py  test_voice_ingress_builder.py  test_voice_subscription_plan.py
tests/bridge/: test_config_reload.py  test_crc_dedup.py  test_echo_bridgereset.py  test_options_config_loop.py  test_parrot_bootstrap_seed.py  test_peer_options_override.py  test_report_peer_id.py  test_rule_timer_timeout.py  test_startup_bridges.py  test_static_tg_options.py  test_subscription_router_dmrd.py  test_unit_data.py  test_unit_data_routing.py  unit_data_helpers.py
tests/domain/: test_config_coerce.py  test_dynamic_tg.py  test_hbp_protocol.py  test_subscription.py  test_ua_timer.py
tests/echo/: test_playback_ingress.py  test_playback_logging.py  test_playback_send_loop.py  test_recording_timers.py  test_rekey_playback.py
tests/fakes/: __init__.py  subscription_store.py
tests/fixtures/: sample_freedmr.cfg
tests/harness/: __init__.py  assertions.py  deterministic.py  playback_helpers.py  scenarios.py  session_replay.py  voice_helpers.py
tests/hbp/: test_hbp_loop_control.py  test_hbp_rate_limit.py  test_ingress.py  test_master_maintenance.py  test_timeout_collision.py
tests/infrastructure/: test_acl_router.py  test_bridge_router_index.py  test_config_push_throttle.py  test_config_regression.py  test_config_reload_udp.py  test_config_validator.py  test_doctor.py  test_dynamic_tg_repository.py  test_echo_cli.py  test_echo_config.py  test_echo_special_tg_downlink.py  test_hbp_auth_handshake.py  test_hbp_repeat_options_filter.py  test_hbp_repeat_talker_alias.py  test_logging_reload.py  test_mqtt_auth.py  test_mqtt_config.py  test_mqtt_publish_filter.py  test_mqtt_publisher.py  test_mqtt_reload.py  test_mqtt_topics.py  test_mysql_pool_ensure.py  test_obp_proxy.py  test_obp_validate_source_server.py  (+22 more)
(+286 files in other folders)
