# ADN DMR Peer Server
# GPL v3. Derived from ADN DMR Server / HBlink.

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adn-server"
version = "0.1.0"
description = "ADN DMR Peer Server"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.10"
dependencies = [
    "Twisted>=22.0",
    "dmr_utils3>=0.1.19",
    "pyyaml>=6.0",
    "bitarray>=2.0",
    "cryptography>=41.0",
    "gTTS>=2.3.1",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov"]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5", "pymdown-extensions>=10.3"]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
adn-server = "adn_server.main:main"
